# CGV_Proj

./: .gitignore  ExplainME.md  Makefile  README.md  exampleExam.txt  exampleRightOfWay.txt  exampleRoad.txt  implementation_plan.md  install_project_deps.sh  requirements.md  traffic
CityTrafficSimulation/: traffic
reports/: exam_20260427_034707.md  exam_20260428_001818.md  exam_20260428_032803.md  exam_20260428_033618.md  exam_20260428_092123.md  exam_20260428_094329.md
rl/: traffic_rl_server.py  train_ppo.py
src/: main.cpp
src/simulator/: CrosswalkZone.cpp  CrosswalkZone.h  Environment.cpp  Environment.h  ExamManager.cpp  ExamManager.h  GameObject.cpp  GameObject.h  Garage.cpp  Garage.h  ModeManager.cpp  ModeManager.h  ObjectsLoader.cpp  ObjectsLoader.h  Pedestrian.cpp  Pedestrian.h  PedestrianManager.cpp  PedestrianManager.h  PedestrianSignal.cpp  PedestrianSignal.h  PlayerCar.cpp  PlayerCar.h  RLTrafficClient.cpp  RLTrafficClient.h  Road.cpp  Road.h  RuleManager.cpp  RuleManager.h  Simulator.cpp  Simulator.h  TrainingManager.cpp  TrainingManager.h  Vehicle.cpp  Vehicle.h
src/simulator/EngineCore/: Colors.cpp  Colors.h  EngineCore.h  EngineCoreBase.cpp  EngineCoreBase.h  EngineCoreLinux.cpp  EngineCoreLinux.h  EngineCoreWindows.cpp  EngineCoreWindows.h  ExceptionClass.cpp  ExceptionClass.h  Graphics.cpp  Graphics.h  Vec3.cpp  Vec3.h
without_traffic_light/: CMakeLists.txt
without_traffic_light/shaders/: fragment.glsl
without_traffic_light/src/: Mesh.h  Model.h  Shader.h  main.cpp
